tests/paczka1/fuzzy1/86212969.err
Error in line 7: lPK57QR8 A406 84,2
Error in line 8: QvX9Sdx A406 99,7
Error in line 6: imw2vhjVeN S861 78,9
Error in line 16: YeBKQ A838 11,4
Error in line 21: YeBKQ S861 71,7
Error in line 22: YeBKQ A838 73,5
Error in line 30: A838 S389 133,3
